welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: ';' expected but '=' found.
      die1:Double=1
                 ^